--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Калинка-ДЕЗ</title>
+  <title>Калинка-ДЕЗ.</title>
   <link rel="shortcut icon" href="logo/logo_bug.png">
 </head>
 <body>
