--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Калинка-ДЕЗ.</title>
-  <link rel="shortcut icon" href="logo/logo_bug.png">
+  <link rel="shortcut icon" href="src/logo_bug.svg">
 </head>
 <body>
   <header>
     <div class="container">
       <div class="header__inner">
         <div class="header__logo">
-          <img src="logo/logo_KD.gif" alt="" height="200px">
+          <img src="src/logo_dez.png" alt="" height="40px">
           <link rel="logo icon" href="logo/logo_KD.gif">
         </div>
 
