--- a/index.html
+++ b/index.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Калинка-ДЕЗ.</title>
-  <link rel="shortcut icon" href="src/logo_bug.svg">
+	<meta charset="UTF-8">	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Калинка-ДЕЗ. Профессиональная дезинфекция, дератизация и дезинсекция</title>
+	<link rel="shortcut icon" href="src/logo_bug.svg">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <header>
-    <div class="container">
-      <div class="header__inner">
-        <div class="header__logo">
-          <img src="src/logo_dez.png" alt="" height="40px">
-          <link rel="logo icon" href="logo/logo_KD.gif">
-        </div>
+	<header>
+		<div class="container">
+			<a href="/" class="logo"><img src="src/logo_dez.svg" alt="логотип компании по дезинфекции, дезинсекции, дератизации Калинка_ДЕЗ"></a>
+			<nav class="nav-bar"><ul>
+				<li><a href="/">Главная</a></li>
+				<li><a href="#">О компании</a></li>
+				<li><a href="#">Услуги</a></li>
+				<li><a href="#">Сертификаты</a></li>
+				<li><a href="#">Вакансии</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul></nav>
+			<a href="+7-495-236-01-45" class="phone-num">+7-495-236-01-45</a>
+		</div><!-- /container -->
+	</header>
 
-      </div>
-    </div><!-- /container -->
-  </header>
-
+	<main>
+		<section class="intro">
+			<div class="container">
+				<div class="intro-content">
+					<h1 class="title">Профессиональная дезинфекция, дератизация и дезинсекция</h1>
+					<a href="#" class="btn btn-cta">Заказать обратный звонок</a>
+					<a href="#" class="btn btn-cta">Заказать срочную обработку</a>
+					<p>
+						Солидный и уважаемый заказчик всегда в праве рассчитывать на сотрудничество с надежным и профессиональным партнером.
+					</p>
+					<a href="#"><img src="src/logo_akfo.svg" alt=""></a>
+					<a href="#"><img src="src/logo_nod.svg" alt=""></a>
+				</div>
+			</div>
+		</section>
+	</main>
 
 </body>
+
 </html>
