Главная страница. Вся верстка с адаптивом, кроме бург.меню

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<section class="intro">
 			<div class="container">
 				<div class="row">
-					<div class="intro-content col-6">
+					<div class="intro-content col-sm-6 col-7">
 						<h1 class="title">Профессиональная дезинфекция, дератизация и дезинсекция</h1>
 						<!-- <button class="btn btn-cta">Заказать обратный звонок</button> -->
 						<ul class="order-btns">
@@ -76,7 +76,7 @@
 								<p class="p-contract">Заключаем договоры</p>
 							</li>
 							<li class="icon icon-act">
-								<p>Составляем акты выполненных работ</p>
+								<p>Составляем акты<br> выполненных работ</p>
 							</li>
 							<li class="icon icon-fast">
 								<p>Принимаем срочные вызовы!</p>
@@ -131,7 +131,7 @@
 					<div class="swiper">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="slider-item col-5">
+								<div class="slider-item">
 									<div class="slider-cover"></div>
 									<div class="slider-img">
 										<img src="src/img/news_1.jpg" alt="">
