Добавлена кнопка меню, js открывает/закрывает nav-bar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="container">
 			<a href="/" class="logo-dez"><img src="src/logo_dez.svg"
 					alt="логотип компании по дезинфекции, дезинсекции, дератизации Калинка_ДЕЗ"></a>
-			<nav class="nav-bar">
+			<nav class="nav-bar" id="navBar">
 				<ul class="links">
 					<li><a href="/">Главная</a></li>
 					<li><a href="#">О компании</a></li>
@@ -34,6 +34,9 @@
 				</ul>
 			</nav>
 			<a href="+7-495-236-01-45" class="phone-num">+7-495-236-01-45</a>
+			<a href="#" class="menu-btn">
+				<span></span>
+			</a>
 		</div><!-- /container -->
 	</header>
 
