--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav class="nav-bar" id="navBar">
 				<ul class="links">
 					<li><a href="/">Главная</a></li>
-					<li><a href="#">О компании</a></li>
+					<li><a href="about.html">О компании</a></li>
 					<li><a href="#">Услуги</a></li>
 					<li><a href="#">Сертификаты</a></li>
 					<li><a href="#">Вакансии</a></li>
@@ -92,7 +92,7 @@
 
 
 
-		<section class="three-dez">
+		<section id="threeDez" class="three-dez">
 			<div class="container container-fluid">
 				<div class="dez-content">
 					<div class="ellipse"></div>
@@ -122,9 +122,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<!--/ container  -->
-
+			</div><!--/ container  -->
 		</section>
 
 		<section class="section">
@@ -231,15 +229,15 @@
 			</div>
 		</section>
 
-		<footer>
+		<footer id="footer">
 			<div class="first-floor">
 				<div class="container">
 					<div class="footer-inner row">
 						<div class="footer-menu">
 
 							<ul class="footer-links links">
-								<li><a href="#">Главная</a></li>
-								<li><a href="#">О компании</a></li>
+								<li><a href="/">Главная</a></li>
+								<li><a href="about.html">О компании</a></li>
 								<li><a href="#">Услуги</a></li>
 								<li><a href="#">Сертификаты</a></li>
 								<li><a href="#">Новости</a></li>
@@ -290,13 +288,14 @@
 					</div> <!-- /row -->
 				</div><!-- /container-->
 			</div><!-- /second-floor-->
-
-
-
 		</footer>
 
+		<script type="module" src="js/smoothscroll.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
+
+
 		<script src="js/swiper-bundle.min.js"></script>
-		<script src="js/script.js"></script>
+		<script type="module" src="js/script.js"></script>
 </body>
 
 </html>
