Добавлены все страницы сайта. Сверстаны до конца: главная, о компании, сертификаты, вакансии, контакты. Адаптив не везде. Не сверстана: услуги

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
 	<main>
 
-		<section class="section">
+		<section class="section section-about">
 			<div class="container container-fluid">
 
 				<div class="about row">
