--- a/index.html
+++ b/index.html
@@ -16,29 +16,10 @@
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
+<script type="module" src="js/main.js"></script>
 
 <body>
-	<header>
-
-		<div class="container">
-			<a href="/" class="logo-dez"><img src="src/logo_dez.svg"
-					alt="логотип компании по дезинфекции, дезинсекции, дератизации Калинка_ДЕЗ"></a>
-			<nav class="nav-bar" id="navBar">
-				<ul class="links">
-					<li><a href="/">Главная</a></li>
-					<li><a href="about.html">О компании</a></li>
-					<li><a href="#">Услуги</a></li>
-					<li><a href="#">Сертификаты</a></li>
-					<li><a href="#">Вакансии</a></li>
-					<li><a href="#">Контакты</a></li>
-				</ul>
-			</nav>
-			<a href="+7-495-236-01-45" class="phone-num">+7-495-236-01-45</a>
-			<a href="#" class="menu-btn">
-				<span></span>
-			</a>
-		</div><!-- /container -->
-	</header>
+	<custom-header></custom-header>
 
 	<main>
 		<section class="intro">
@@ -228,67 +209,9 @@
 				</div>
 			</div>
 		</section>
+	</main>
+	<custom-footer></custom-footer>
 
-		<footer id="footer">
-			<div class="first-floor">
-				<div class="container">
-					<div class="footer-inner row">
-						<div class="footer-menu">
-
-							<ul class="footer-links links">
-								<li><a href="/">Главная</a></li>
-								<li><a href="about.html">О компании</a></li>
-								<li><a href="#">Услуги</a></li>
-								<li><a href="#">Сертификаты</a></li>
-								<li><a href="#">Новости</a></li>
-								<li><a href="#">Вакансии</a></li>
-							</ul>
-
-							<ul class="contacts">
-								<li>
-									<p><b>Телефон:</b><br> +7-495-236-01-45</p>
-								</li>
-								<li>
-									<p><b>Адрес:</b><br> 107045, г.Москва,
-										Луков переулок, д.10</p>
-								</li>
-							</ul>
-
-							<ul class="contacts">
-								<li>
-									<p><b>Почта:</b><br> kalinka-dez@list.ru</p>
-								</li>
-								<li>
-									<p><b>График работы офиса:</b><br> Пн-пт: с 09:00 до 17:00<br>
-										Сб-Вс: выходной</p>
-								</li>
-							</ul>
-
-							<ul class="order-btns footer-btns">
-								<li><a href="#" class="btn btn-cta">Заказать обратный звонок</a></li>
-								<li><a href="#" class="btn btn-cta">Заказать срочную обработку</a></li>
-							</ul>
-
-
-
-						</div><!-- /footer-menu-->
-					</div> <!-- /footer-inner row -->
-				</div><!-- /container-->
-			</div><!-- /first-floor-->
-
-			<div class="second-floor">
-				<div class="container">
-					<div class="row">
-						<div class="copyright">
-							<p class="footer-next">&copy; 2003 - 2022 ООО «Калинка-ДЕЗ»<br>
-								&copy; Все права защищены. Данный веб-сайт носит информационный характер и не является публичной
-								офертой.
-							</p>
-						</div><!-- /copyright-->
-					</div> <!-- /row -->
-				</div><!-- /container-->
-			</div><!-- /second-floor-->
-		</footer>
 
 		<script type="module" src="js/smoothscroll.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
