все страницы сверстаны. адаптив почти готов

--- a/contacts.html
+++ b/contacts.html
@@ -57,9 +57,7 @@
 
 	</section>
 
-
-
-	<custom-dez></custom-dez>
+	<!-- <custom-dez></custom-dez> -->
 	<custom-footer></custom-footer>
 
 	<script type="module" src="js/smoothscroll.js"></script>
