--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 <body>
 	<custom-header></custom-header>
 
-	<section class="intro intro-services">
+	<section class="section intro-services">
 		<div class="container">
 			<div class="row">
 				<div class="intro-content col-sm-6 col-7">
@@ -31,20 +31,95 @@
 						<li><a href="#" class="btn btn-cta">Заказать срочную обработку</a></li>
 					</ul>
 
-
 					<p>
 						Мы навсегда избавим Ваши помещения от грызунов, бытовых насекомых, комаров и болезнетворных микроорганизмов.
 					</p>
-					<a href="https://xn--80aumx.xn--p1ai" target="_blank"><img class="logo-intro" src="../src/logo_akfo.svg"
-							alt=""></a>
-					<a href="https://www.nod.su" target="_blank"><img class="logo-intro" src="../src/logo_nod.svg" alt=""></a>
 				</div>
+				<div>
+					<ul class="icons-bar-inner icons-serv col-sm-6 col-7">
+						<li class="icon icon-time">
+							<p>Обработка в любое время!</p>
+						</li>
+						<li class="icon icon-contract">
+							<p class="p-contract">Заключаем договоры</p>
+						</li>
+						<li class="icon icon-act">
+							<p>Составляем акты<br> выполненных работ</p>
+						</li>
+						<li class="icon icon-fast">
+							<p>Принимаем срочные вызовы!</p>
+						</li>
+					</ul>
+				</div><!-- /icons-bar-inner -->
+
 
 			</div><!-- row -->
 		</div><!-- container -->
 	</section> <!-- intro -->
 
+<section class="section section-services">
+	<div class="container container-fluid">
+<div class="services row">
+<h2 class="title">САНИТАРНО-ЭПИДЕМИОЛОГИЧЕСКИЕ УСЛУГИ</h2>
+	<div class="services-inner">
+		<div class="services-content">
+				<h3 class="title-serv">Мы предоставляем услуги:</h3>
 
+				<ul>
+					<li>по уничтожению грызунов (мышей, крыс);
+					</li>
+					<li>по уничтожению бытовых насекомых (мух, тараканов, клопов, рыжих домовых муравьев, блох);
+					</li>
+					<li>по уничтожению комаров в подвальных помещениях;
+					</li>
+					<li>проведение профилактической, текущей и заключительной дезинфекции ( уничтожение вирусов, микробов, грибков);
+					</li>
+					<li>оформление санитарных паспортов объектов;
+					</li>
+					<li>консультационные услуги по санитарно-эпидемиологическим вопросам;
+					</li>
+					<li>решение сложных и нестандартных задач;
+					</li>
+					<li>контроль эффективности проведенных работ;
+					</li>
+					<li>гарантийное и постгарантийное обслуживание помещений заказчика;</li>
+				</ul>
+		</div>
+		<div class="serv-img serv-img-1"></div>
+	</div>
+
+
+	<div class="services-inner">
+		<div class="serv-img serv-img-2"></div>
+		<div class="services-content">
+						<h3 class="title-serv">Мы используем:</h3>
+<ul>
+
+	<li>новейшие эффективные сертифицированные препараты отечественного и импортного производства, безвредные для людей и домашних животных;
+	</li>
+	<li>современные, научно разработанные методики и инновационные технологии;
+	</li>
+	<li>самое совершенное на сегодняшний день, высокотехнологичное оборудование;</li>
+</ul>
+
+		</div>
+	</div>
+	
+
+	<div class="services-inner">
+		<div class="services-content">
+			<h3 class="title-serv">Вы всегда можете рассчитывать на 
+				дополнительные услуги.</h3>
+
+			<p>Инжиниринговые услуги - обслуживание техники, обеспечивающей эксплуатацию здания, в том числе работы по обязательной очистке и дезинфекции систем вентиляции и кондиционирования воздуха (в соответствии с Постановлением Главного Государственного санитарного врача по г.Москве №4 от 27 августа 2004 г.)</p>
+		</div>
+		<div class="serv-img serv-img-3"></div>
+	</div>
+	
+</div>
+
+</div>
+</section>
 
 
 
