--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
 </section>
 
 
-	<custom-dez></custom-dez>
+	<!-- <custom-dez></custom-dez> -->
 	<custom-footer></custom-footer>
 
 	<script type="module" src="js/smoothscroll.js"></script>
