svg лого в секции intro на главной обернуты в div-ы

--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
 							Солидный и уважаемый заказчик всегда в праве рассчитывать на сотрудничество с надежным и профессиональным
 							партнером.
 						</p>
-						<a href="https://xn--80aumx.xn--p1ai" target="_blank"><img class="logo-intro" src="../src/logo_akfo.svg"
-								alt=""></a>
-						<a href="https://www.nod.su" target="_blank"><img class="logo-intro" src="../src/logo_nod.svg" alt=""></a>
+						<a href="https://xn--80aumx.xn--p1ai" target="_blank">
+
+							<div><img class="logo-intro" src="../src/logo_akfo.svg"
+								alt=""></div>
+								
+							</a>
+
+						<div><a href="https://www.nod.su" target="_blank"><img class="logo-intro" src="../src/logo_nod.svg" alt=""></div>
+						
+						</a>
 					</div>
 
 				</div><!-- row -->
