--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 							Солидный и уважаемый заказчик всегда в праве рассчитывать на сотрудничество с надежным и профессиональным
 							партнером.
 						</p>
-						<a href="https://xn--80aumx.xn--p1ai" target="_blank">
+						<!-- <a href="https://xn--80aumx.xn--p1ai" target="_blank"> -->
 
 							<div><img class="logo-intro" src="../src/logo_akfo.svg"
 								alt=""></div>
 								
-							</a>
+							<!-- </a> -->
 
-						<div><a href="https://www.nod.su" target="_blank"><img class="logo-intro" src="../src/logo_nod.svg" alt=""></div>
+						<a href="https://www.nod.su" target="_blank"><div><img class="logo-intro" src="../src/logo_nod.svg" alt=""></div>
 						
 						</a>
 					</div>
