исправлен адрес к лого на главной

--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
 							Солидный и уважаемый заказчик всегда в праве рассчитывать на сотрудничество с надежным и профессиональным
 							партнером.
 						</p>
-						<!-- <a href="https://xn--80aumx.xn--p1ai" target="_blank"> -->
+						<a href="https://xn--80aumx.xn--p1ai" target="_blank">
+							<div>
+								<img class="logo-intro" src="src/logo_akfo.svg"
+								alt="">
+							</div>								
+							</a>
 
-							<div><img class="logo-intro" src="../src/logo_akfo.svg"
-								alt=""></div>
-								
-							<!-- </a> -->
-
-						<a href="https://www.nod.su" target="_blank"><div><img class="logo-intro" src="../src/logo_nod.svg" alt=""></div>
+						<a href="https://www.nod.su" target="_blank">
+							<div>
+								<img class="logo-intro" src="src/logo_nod.svg" alt="">
+							</div>
 						
 						</a>
 					</div>
@@ -179,7 +182,7 @@
 				<div class="partners">
 
 					<div class="partner-logo">
-						<img class="logo-akfo" src="src/logo_akfo_1.svg" alt="">
+						<img cla_s="logo-akfo" src="src/logo_akfo_1.svg" alt="">
 					</div>
 
 					<div class="partner-logo">
