--- a/index.html
+++ b/index.html
@@ -223,10 +223,62 @@
 	<custom-footer></custom-footer>
 
 
+
+	<div id="popupCall" class="popup">
+		<div class="popup-body">
+			<div class="popup-content">
+	<form action="#" id="formCall" class="form-body">
+
+	<h3 class="title form-title">Заказать обратный звонок</h3>
+	<p>Мы перезвоним Вам, как только получим заявку</p>
+
+	<div class="form-item">
+		<label for="formName" class="form-label"></label>
+	<input id="formName" type="text" name="name" class="form-input" placeholder="Ваше имя:*">
+	</div>
+	<div class="form-item">
+		<label for="formPhonNum" class="form-label"></label>
+	<input id="formPhonNum" type="tel" name="Phon number" class="form-input" placeholder="+7-999-777-77-77*">
+	</div>
+
+	<button type="submit" class="btn btn-cta">Перезвонить мне</button>
+	</form>
+	
+			</div>
+		</div>
+	</div>
+	
+	<div id="popupOrder" class="popup">
+		<div class="popup-body">
+			<div class="popup-content">
+				<form action="#" id="formCall" class="form-body">
+
+					<h3 class="title form-title">Заказать обработку</h3>
+					<p>Мы перезвоним Вам, как только получим заявку</p>
+
+					<div class="form-item">
+						<label for="formName" class="form-label"></label>
+					<input id="formName" type="text" name="name" class="form-input" placeholder="Ваше имя:*">
+					</div>
+					<div class="form-item">
+						<label for="formPhonNum" class="form-label"></label>
+					<input id="formPhonNum" type="tel" name="Phon number" class="form-input" placeholder="+7-999-777-77-77*">
+					</div>
+					<div class="form-item">
+						<label for="formName" class="form-label" ></label>
+					<input id="formWork" type="text" name="work" class="form-input" placeholder="Вид работ или описание проблемы (не обязательно"	>
+					</div>
+				
+					<button type="submit" class="btn btn-cta">Отправить заявку</button>
+					</form>
+	
+			</div>
+		</div>
+	</div>
+
+
 		<script type="module" src="js/smoothscroll.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
-
-
 		<script src="js/swiper-bundle.min.js"></script>
 		<script type="module" src="js/script.js"></script>
 </body>
