--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 						<h1 class="title">Профессиональная дезинфекция, дератизация и дезинсекция</h1>
 						<!-- <button class="btn btn-cta">Заказать обратный звонок</button> -->
 						<ul class="order-btns">
-							<li><a href="#" class="btn btn-cta">Заказать обратный звонок</a></li>
+							<!-- <li><a href="#" class="btn btn-cta">Заказать обратный звонок</a></li> -->
 							<li><a href="#" class="btn btn-cta">Заказать срочную обработку</a></li>
 						</ul>
 
 
 						<p>
-							Солидный и уважаемый заказчик всегда в праве рассчитывать на сотрудничество с надежным и профессиональным
+							Солидный и уважаемый заказчик всегда вправе рассчитывать на сотрудничество с надежным и профессиональным
 							партнером.
 						</p>
 						<a href="https://xn--80aumx.xn--p1ai" target="_blank">
@@ -119,7 +119,7 @@
 		<section class="section">
 			<div class="container-fluid">
 				<div class="row">
-					<h2 class="title">новости:</h2>
+					<h2 class="title">новости</h2>
 					<div class="swiper">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
@@ -129,6 +129,7 @@
 										<img src="src/img/news_1.jpg" alt="">
 									</div>
 									<div class="slider-news">
+										<h4 class="title">награждены</h4>
 										<p>За вклад в развитие потребительского рынка и услуг города Москвы и в связи с пятилетием компании,
 											коллектив ООО "Калинка-ДЕЗ" награжден благодарственным письмом Департамента потребительского рынка
 											и
@@ -143,6 +144,7 @@
 										<img src="src/img/news_2.jpg" alt="">
 									</div>
 									<div class="slider-news">
+										<h4 class="title">опасность насекомых</h4>
 										<p>Насекомые могут проникать в самые разные места, так как ведут себя очень скрытно, поэтому о
 											наличии тараканов в доме можно узнать, только когда они начинают активно размножаться.
 											При этом они могут появиться в любом месте, даже в тех, где их никогда не было.</p>
@@ -157,7 +159,8 @@
 
 									</div>
 									<div class="slider-news">
-										<p>Дезинфекция рук очень важна, потому что именно на них мы чаще всего касаемся различных объектов.
+										<h4 class="title">Дезинфекция рук очень важна</h4>
+										<p>Потому что именно на них мы чаще всего касаемся различных объектов.
 											Поэтому прежде чем приступить к работе, необходимо подготовить руки.
 											Для этого необходимо вымыть их с мылом под проточной водой.
 											После чего обработать дезинфицирующим средством.
@@ -178,11 +181,11 @@
 
 		<section class="section-partners">
 			<div class="container container-fluid">
-				<h2 class="title">Наши партнеры.</h2>
+				<h2 class="title">Наши партнеры</h2>
 				<div class="partners">
 
 					<div class="partner-logo">
-						<img cla_s="logo-akfo" src="src/logo_akfo_1.svg" alt="">
+						<img class="logo-akfo" src="src/logo_akfo_1.svg" alt="">
 					</div>
 
 					<div class="partner-logo">
