--- a/sertificats.html
+++ b/sertificats.html
@@ -21,7 +21,7 @@
 
 	<section class="section sertificats-section">
 <div class="container container-fluid">
-	<h2 class="title">Сертификаты на производимые нами работы:</h2>
+	<h2 class="title">Сертификаты на производимые нами работы</h2>
 	<div class="sertificats row">
 			<div class="sertificats ellipse"></div>
 		<div class="sertificats-inner col-lg-4 col-md-12">		
