--- a/services.html
+++ b/services.html
@@ -27,8 +27,8 @@
 						профилактические и истребительные мероприятия</h1>
 					<!-- <button class="btn btn-cta">Заказать обратный звонок</button> -->
 					<ul class="order-btns">
-						<li><a href="#" class="btn btn-cta">Заказать обратный звонок</a></li>
-						<li><a href="#" class="btn btn-cta">Заказать срочную обработку</a></li>
+						<!-- <li><a href="#" class="btn btn-cta">Заказать обратный звонок</a></li> -->
+						<li><a href="#" class="btn btn-cta">Заказать обработку</a></li>
 					</ul>
 
 					<p>
@@ -63,7 +63,7 @@
 <h2 class="title">САНИТАРНО-ЭПИДЕМИОЛОГИЧЕСКИЕ УСЛУГИ</h2>
 	<div class="services-inner">
 		<div class="services-content">
-				<h3 class="title-serv">Мы предоставляем услуги:</h3>
+				<h3 class="title-serv">Мы предоставляем услуги</h3>
 
 				<ul>
 					<li>по уничтожению грызунов (мышей, крыс);
@@ -92,7 +92,7 @@
 	<div class="services-inner">
 		<div class="serv-img serv-img-2"></div>
 		<div class="services-content">
-						<h3 class="title-serv">Мы используем:</h3>
+						<h3 class="title-serv">Мы используем</h3>
 <ul>
 
 	<li>новейшие эффективные сертифицированные препараты отечественного и импортного производства, безвредные для людей и домашних животных;
@@ -109,7 +109,7 @@
 	<div class="services-inner">
 		<div class="services-content">
 			<h3 class="title-serv">Вы всегда можете рассчитывать на 
-				дополнительные услуги.</h3>
+				дополнительные услуги</h3>
 
 			<p>Инжиниринговые услуги - обслуживание техники, обеспечивающей эксплуатацию здания, в том числе работы по обязательной очистке и дезинфекции систем вентиляции и кондиционирования воздуха (в соответствии с Постановлением Главного Государственного санитарного врача по г.Москве №4 от 27 августа 2004 г.)</p>
 		</div>
