--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
 	<section class="section intro-services">
 		<div class="container">
 			<div class="row">
-				<div class="intro-content col-sm-6 col-7">
+				<div class="intro-content col-sm-7 col-8">
 					<h1 class="title">Мы предлагаем:
 						профилактические и истребительные мероприятия</h1>
 					<!-- <button class="btn btn-cta">Заказать обратный звонок</button> -->
@@ -65,7 +65,7 @@
 		<div class="services-content">
 				<h3 class="title-serv">Мы предоставляем услуги</h3>
 
-				<ul>
+				<ul class="services-list">
 					<li>по уничтожению грызунов (мышей, крыс);
 					</li>
 					<li>по уничтожению бытовых насекомых (мух, тараканов, клопов, рыжих домовых муравьев, блох);
@@ -93,7 +93,7 @@
 		<div class="serv-img serv-img-2"></div>
 		<div class="services-content">
 						<h3 class="title-serv">Мы используем</h3>
-<ul>
+<ul class="services-list">
 
 	<li>новейшие эффективные сертифицированные препараты отечественного и импортного производства, безвредные для людей и домашних животных;
 	</li>
@@ -108,7 +108,7 @@
 
 	<div class="services-inner">
 		<div class="services-content">
-			<h3 class="title-serv">Вы всегда можете рассчитывать на 
+			<h3 class="title-serv">Вы всегда можете рассчитывать<br> на 
 				дополнительные услуги</h3>
 
 			<p>Инжиниринговые услуги - обслуживание техники, обеспечивающей эксплуатацию здания, в том числе работы по обязательной очистке и дезинфекции систем вентиляции и кондиционирования воздуха (в соответствии с Постановлением Главного Государственного санитарного врача по г.Москве №4 от 27 августа 2004 г.)</p>
