--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@
 							<input id="" type="tel" name="modalPhone" class="form-input modal-phone" required>
 						</div>
 						<div class="form-item">
+							<label for="email" class="form-label">Email</label>
+							<input id="" type="text" name="email" class="form-input modal-email" pattern="^[_a-z0-9-\-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,})$" required>
+						</div>
+						<div class="form-item">
 							<label for="work" class="form-label">Вид работ</label>
 							<textarea id="formWork" type="text" name="work" class="form-input"
 								placeholder="Вид работ или описание проблемы (не обязательно)"></textarea>
